--- a/p2/estilo.css
+++ b/p2/estilo.css
@@ -11,6 +11,7 @@ body{
   flex-direction: column;
   border: 1px solid green;
 }
+
 .c1{
     height: 90%;
     width: 100%;
@@ -26,13 +27,16 @@ body{
 #principal{
     width: 75%;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 #menu{
     width: 25%;
     height: 100%;
     background-color: yellow;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     
 }
 #btn{
