--- a/SegundoParcial/estilos.css
+++ b/SegundoParcial/estilos.css
@@ -177,4 +177,12 @@ footer {
     width: 100%;
     height: 50px;
 }
+.info{
+    height:  200px;
+    background-color: #7683EA;
+     padding: 10px 10px 10px 10px;
+     display: flex;
+     flex-direction: column;
+     align-content: space-between;
+}
 
