--- a/parcialFinal/estilos.css
+++ b/parcialFinal/estilos.css
@@ -94,6 +94,7 @@ main {
     justify-content: start;
     gap: 0.5rem;
     align-items: center;
+    border-bottom: none;
 }
 
 .btn-opciones {
@@ -186,4 +187,21 @@ footer {
     align-content: flex-end;
 
 }
-
+.pie-inferior{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    height: 150px;
+}
+#pie{
+    width: 100%;
+    
+}
+.cont-pie{
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column-reverse;
+    
+    
+}
